# mcp-toolz

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.glama  Makefile  README.md  glama.json  osv-scanner.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-pip.txt  requirements.in  requirements.txt  server.json
.claude-plugin/: marketplace.json
.claude/skills/resolve-github-alerts/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  resolve-github-alerts.yml  scorecard.yml  trivy.yml
docker/glama/: package-lock.json  package.json
plugins/mcp-toolz-server/: .mcp.json
plugins/mcp-toolz-server/.claude-plugin/: plugin.json
plugins/precommit-detect/.claude-plugin/: plugin.json
plugins/precommit-detect/hooks/: PRECOMMIT_INSTRUCTIONS.md  hooks.json  precommit-detect.sh
plugins/resolve-github-alerts/.claude-plugin/: plugin.json
plugins/resolve-github-alerts/commands/: resolve-github-alerts.md
plugins/resolve-github-alerts/skills/resolve-github-alerts/: SKILL.md
plugins/revise-all-docs/.claude-plugin/: plugin.json
plugins/revise-all-docs/commands/: improve-all-docs.md  revise-all-docs.md
plugins/revise-all-docs/skills/all-docs-improver/: SKILL.md
plugins/revise-all-docs/skills/all-docs-improver/references/: quality-criteria.md
plugins/revise-all-docs/skills/revise-all-docs/: SKILL.md
src/: __init__.py
src/context_manager/: __init__.py  anthropic_client.py  clipboard.py  deepseek_client.py  gemini_client.py  openai_client.py  storage.py
src/mcp_server/: __init__.py  server.py
tests/: conftest.py  test_anthropic_client.py  test_clipboard.py  test_deepseek_client.py  test_gemini_client.py  test_mcp_server.py  test_openai_client.py
